--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
+    "Rev": "next dev",
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
@@ -38,6 +39,6 @@
     "eslint-config-next": "15.5.3",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.3.8",
-    "typescript": "^5"
+    "typescript": "5.9.2"
   }
 }
